# Robotics-and-Computer-Vision-Semester-Project

./: README.md
RRTConnect/: README.md
RRTConnect/src/: pathplanning.cpp
ReachabilityAnalysis_solution/: CMakeLists.txt  README.md
RoviSamplePlugin/: README.md
RoviSamplePlugin/src/: SamplePlugin.cpp
V_2D_Pose/: .gitignore  CMakeLists.txt  README.md
V_2D_Pose/files/: cratos.ply  dog.ply  doggy.ply
V_2D_Pose/src/: create_templates_cad.cpp  linemod.cpp
V_3D_Pose/: CMakeLists.txt  README.md  dog.pcd  poseEstimation.cpp
V_3D_Pose/Noise/: CMakeLists.txt  Noise.cpp  README.md  scene_filtered.pcd
V_3D_Pose/test_Scenes/: rwsettings.xml
Workcell/: README.md  Scene.wc.xml
Workcell/UR5/UR-6-85-5-A/: Device.wc.xml
Workcell/parts/: dog.3ds  dog_stl3.stl  duck.stl  duck2.stl
Workcell/wsg50/: wsg50.xml
main/: .gitignore  CMakeLists.txt  README.md
main/src/: SamplePlugin.cpp  SamplePlugin.hpp  SamplePlugin.ui  config.h.in  globals.hpp  imager.hpp  pcl_functions.hpp  plugin.json  reachabilityAnalysis.hpp  rrtconnect.hpp
